# cspell:word codegen

[profile.release]
codegen-units = 1
lto = "fat"

[workspace]
members = [
  "allowlist",
  "rust-builder"
]
resolver = "2"

[workspace.package]
authors = ["Econia Labs <developers@econialabs.com>"]
edition = "2021"
homepage = "https://www.econialabs.com"
license = "Apache-2.0"
rust-version = "1.79.0"
